2008-03-18  Andy Wingo  <wingo@pobox.com>

	* ext/ffmpeg/gstffmpegdec.c (gst_ffmpegdec_sink_event): Only drain
	if we've already set up a codec.

2008-03-17  Andy Wingo  <wingo@pobox.com>

	* ext/ffmpeg/Makefile.am (libgstffmpeg_la_LIBADD): Re-add -lz
	explicitly here.

	* configure.ac: Remove -lz from FFMPEG_LIBS, because FFMPEG_LIBS
	are used in the Makefile.am as a DEPENDENCIES target, and -lz is
	not a target. Also in a blahriffic turn of events, MMX and Altivec
	code on MacOS 10.5 produces non-PIC code. Turn them off on macos.

2008-03-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_sink_event):
	When we receive a newsegment event, we must drain any pending frames
	because they belong to the previous segment. This fixes some cases of
	very large timestamps when doing segment seeks.

2008-03-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_open),
	(get_output_buffer), (gst_ffmpegdec_video_frame),
	(gst_ffmpegdec_chain):
	Work around an ffmpeg bug where it always returns 0 timestamps.

2008-03-06  Michael Smith <msmith@fluendo.com>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_pixfmt_to_caps):
	  Fix masks for RGBA32 caps. Fixes colours when decoding using
	  ffdec_qtrle. Follows an identical fix in the ffmpegcolorspace copy of
	  this code (revision 1.29).

2008-03-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_class_init),
	(gst_ffmpegdec_setcaps), (check_keyframe),
	(gst_ffmpegdec_video_frame), (gst_ffmpegdec_sink_event),
	(gst_ffmpegdec_set_property):
	Detect DTS or PTS as timestamps. This is done by tracking frame
	reordering on the output and making sure that timestamps don't go
	backwards. Fixes #482660.

2008-02-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Damien Lespiau <damien dot lespiau at gmail dot com>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_class_init),