@@ -1,4 +1,4 @@
 # 6315, 10844, 10876, 10910, 10932, 10939
-FFMPEG_REVISION=11247
+FFMPEG_REVISION=12672
 FFMPEG_CO_DIR=gst-libs/ext/ffmpeg
 FFMPEG_SVN=svn://svn.mplayerhq.hu/ffmpeg/trunk
